[project]
name = "genomic-helper"
version = "0.1.0"
description = "Generic genomic helper utilities for feature-based background peak selection."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/yourusername/genomic-helper"
Issues   = "https://github.com/yourusername/genomic-helper/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"